--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3"
+    "react-hook-form": "^7.49.3",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
